# mcp-odoo

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  pyproject.toml  run_server.py  validation.py
src/odoo_mcp/: __init__.py  extensions.py  models.py  odoo_client.py  prompts.py  resources.py  server.py  tools_hr.py  tools_inventory.py  tools_purchase.py  tools_sales.py
